[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geminigen-api"
version = "0.1.0"
description = "GeminiGen AI Python SDK"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "curl_cffi"
]

[tool.setuptools.packages.find]
where = ["."]
